# tension

./: .env  .gitignore  db.sqlite3  main.py  manage.py  proyecto_sdd.md  pyproject.toml  requirements.txt
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  desarrollo.py  produccion.py
nutrition/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
requirements/: base.txt  desarrollo.txt  produccion.txt
static/css/: tension.css
templates/: base.html
templates/includes/: pagination.html
templates/nutrition/: food_confirm_delete.html  food_detail.html  food_form.html  food_list.html  recipe_confirm_delete.html  recipe_detail.html  recipe_form.html  recipe_list.html
templates/registration/: login.html
templates/tracking/: activities.html  activity_form.html  activity_log_form.html  activity_log_list.html  add_measurement.html  add_weight.html  analysis.html  dashboard.html  edit_measurement.html  food_daily_history.html  food_log_form.html  food_log_list.html  history.html  history_print.html  supplement_form.html  supplement_log_form.html  supplement_log_list.html  supplements.html  weight_list.html
templates/tracking/partials/: daily_food_modal.html
tracking/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tracking/migrations/: 0001_initial.py  0002_weightmeasurement.py
tracking/services/: ai_analysis.py
