[project]
name = "tension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = [
    "django-extension>=0.1.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "djlint>=1.36.4",
    "django-debug-toolbar>=6.2.0",
]
prod = [
    "psycopg2>=2.9.11",
]
